Add load and flash command

--- a/kimchi2018badge/Makefile
+++ b/kimchi2018badge/Makefile
@@ -32,6 +32,12 @@ bitstream: $(BINS)
 
 simulate: $(VCDS)
 
+flash: $(PROJ).bin
+	iceprog $<
+
+load: $(PROJ).bin
+	iceprog -S $<
+
 $(BLIFS): %.blif: %.v $(MODSRCS)
 	yosys '$(SYNTHFLAGS) -blif $@' $^
 
